--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,95 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Lato&family=Montserrat&family=Questrial&family=Rubik&family=Secular+One&display=swap");
+* {
+  color: white;
+}
 
+.header {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.container00 {
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.container {
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.arrowDown {
+  display: inline-block;
+  width: 90px;
+  margin-top: 5px;
+}
+
+.logoPc {
+  width: 240px;
+  margin-left: -10px;
+  margin-right: 20px;
+}
+
+#button {
+  padding: 15px 35px;
+}
+
+.footer {
+  background-color: black;
+  height: 15vh;
+  font-size: 12px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer a:hover {
+  color: #b9b9b9;
+}
+.footer .copyMariana {
+  color: #555252;
+}
+
+.container00.container01 {
+  background-image: url(../../images//home/01.jpg);
+}
+.container00.container02 {
+  background-image: url(../../images/home/03.jpg);
+}
+.container00.container03 {
+  background-image: url(../../images//home/02.gif);
+}
+.container00.container04 {
+  background-image: url(../../images//home/04.jpg);
+}
+
+.container00 {
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.titlePadding {
+  padding-top: 200px;
+}
+
+.shortTitle {
+  width: 550px;
+  margin-bottom: -25px;
+}
+
+.mediumTitle {
+  width: 650px;
+  margin-bottom: -25px;
+}
 
 /*# sourceMappingURL=style.css.map */
