--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,12 @@
   font-size: 12px;
   font-weight: bold;
 }
+.header #navItem:hover {
+  color: #b9b9b9;
+}
 
 .container00 {
+  width: auto;
   min-height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,7 +20,6 @@
 }
 
 .container {
-  min-height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -31,7 +34,7 @@
 .logoPc {
   width: 240px;
   margin-left: -10px;
-  margin-right: 20px;
+  margin-right: 40px;
 }
 
 #button {
