--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -1,9 +1,16 @@
 .header {
     font-size: 12px;
     font-weight: bold;
+
+    #navItem  {
+        &:hover {
+            color: $link-hover;
+        }
+    }
 }
 
 .container00 {
+    width: auto;
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -11,7 +18,6 @@
 }
 
 .container {
-    min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -26,7 +32,7 @@
 .logoPc {
     width: 240px;
     margin-left: -10px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 #button {
