--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,21 @@
   color: #555252;
 }
 
+@media (max-width: 450px) {
+  .logoPc {
+    width: 180px;
+    margin-top: 15px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+}
+@media (max-width: 350px) {
+  .logoPc {
+    width: 150px;
+    margin-top: 15px;
+  }
+}
 .container00.container01 {
   background-image: url(../../images//home/01.jpg);
 }
@@ -93,6 +108,24 @@
 .mediumTitle {
   width: 650px;
   margin-bottom: -25px;
+}
+
+@media (max-width: 750px) {
+  .titlePadding {
+    padding-top: 120px;
+  }
+  .shortTitle,
+.mediumTitle {
+    width: auto;
+    font-size: 50px;
+  }
+}
+@media (max-width: 380px) {
+  .shortTitle,
+.mediumTitle {
+    width: auto;
+    font-size: 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
