--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -61,3 +61,23 @@
         color: $copy-color;
     }
 }
+
+// Media query
+
+@media (max-width: 450px){
+    .logoPc{
+        width: 180px;
+        margin-top: 15px;
+    }
+
+    .footer{
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 350px) {
+    .logoPc {
+        width: 150px;
+        margin-top: 15px;
+    }
+}
