--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@
 
 #button {
   padding: 15px 35px;
+  border: 2px solid white;
 }
 
 .footer {
@@ -102,12 +103,12 @@
 
 .shortTitle {
   width: 550px;
-  margin-bottom: -25px;
+  margin-bottom: 25px;
 }
 
 .mediumTitle {
   width: 650px;
-  margin-bottom: -25px;
+  margin-bottom: 25px;
 }
 
 @media (max-width: 750px) {
