--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -21,3 +21,31 @@
     margin-left: -10px;
     margin-right: 20px;
 }
+
+#button{
+    padding: $padding-button;
+}
+
+.footer {
+    background-color: black;
+    height: 15vh;
+    font-size: 12px;
+    font-size: 12px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a{
+        text-decoration: none;
+        color: white;
+
+        &:hover{
+            color: $link-hover;
+        }
+    }
+
+    .copyOBC {
+        color: $copy-color;
+    }
+}
