--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -18,3 +18,21 @@
     
 }
 
+.titlePadding{
+    padding-top: 200px;
+}
+
+.shortTitle{
+    width: 550px;
+    margin-bottom: -25px;
+}
+
+.mediumTitle{
+    width: 650px;
+    margin-bottom: -25px;
+}
+
+
+
+
+
