--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
   font-size: 12px;
   font-weight: bold;
 }
+.header #navItem:hover {
+  color: #b9b9b9;
+}
 
 .container00 {
   min-height: 100vh;
@@ -24,7 +27,7 @@
 .logoPc {
   width: 240px;
   margin-left: -10px;
-  margin-right: 20px;
+  margin-right: 40px;
 }
 
 #button {
@@ -52,6 +55,21 @@
   color: #555252;
 }
 
+@media (max-width: 405px) {
+  .logoPc {
+    width: 180px;
+    margin-top: 15px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+}
+@media (max-width: 350px) {
+  .logoPc {
+    width: 150px;
+    margin-top: 15px;
+  }
+}
 .container00.container01 {
   background-image: url(../../images/home/01.jpg);
 }
@@ -77,6 +95,24 @@
 .mediumTitle {
   width: 650px;
   margin-bottom: -25px;
+}
+
+@media (max-width: 750px) {
+  .titlePadding {
+    padding-top: 120px;
+  }
+  .shortTitle,
+.mediumTitle {
+    width: auto;
+    font-size: 50px;
+  }
+}
+@media (max-width: 380px) {
+  .shortTitle,
+.mediumTitle {
+    width: auto;
+    font-size: 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
