--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -1,6 +1,12 @@
 .header {
     font-size: 12px;
     font-weight: bold;
+
+    #navItem {
+        &:hover{
+            color: $link-hover;
+        }
+    }
  }
 
 .container00 {
@@ -19,7 +25,7 @@
 .logoPc {
     width: 240px;
     margin-left: -10px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 #button{
@@ -47,5 +53,24 @@
 
     .copyOBC {
         color: $copy-color;
+    }
+}
+
+// Media query
+@media (max-width: 405px){
+    .logoPc{
+        width: 180px;
+        margin-top: 15px;
+    }
+
+    .footer {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 350px){
+    .logoPc {
+        width: 150px;
+        margin-top: 15px;
     }
 }
