--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -32,7 +32,26 @@
     margin-bottom: -25px;
 }
 
+@media (max-width: 750px) {
+    .titlePadding {
+        padding-top: 120px;
+    }
 
+    .shortTitle,
+    .mediumTitle {
+        width: auto;
+        font-size: 50px;
+    }
+}
+
+@media(max-width: 380px) {
+    .shortTitle,
+    .mediumTitle {
+        width: auto;
+        font-size: 40px;
+    }
+
+}
 
 
 
