--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@
   color: #555252;
 }
 
+@media (max-width: 449px) {
+  .downloadDesc .button {
+    margin: 10px 0px;
+  }
+}
 @media (max-width: 405px) {
   .logoPc {
     width: 180px;
@@ -113,6 +118,139 @@
 .mediumTitle {
     width: auto;
     font-size: 40px;
+  }
+}
+.container00.container05 {
+  background-image: url(../../images/falcon/01.jpg);
+}
+.container00.container06 {
+  background-image: url(../../images/falcon/02.jpg);
+}
+.container00.carrossel01 {
+  background-image: url(../../images/falcon/03.jpg);
+}
+.container00.carrossel02 {
+  background-image: url(../../images/falcon/04.jpg);
+}
+.container00.carrossel03 {
+  background-image: url(../../images/falcon/05.jpg);
+}
+.container00.carrossel04 {
+  background-image: url(../../images/falcon/06.jpg);
+}
+.container00.carrossel05 {
+  background-image: url(../../images/falcon/07.jpg);
+}
+.container00.container07 {
+  background-image: url(../../images/falcon/08.jpg);
+}
+
+.titleFalcon9 {
+  font-size: 90px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 514;
+}
+
+.titleContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80vh;
+}
+
+.numbers {
+  background-color: black;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.numbers .titleNumb {
+  font-size: 90px;
+}
+.numbers .subTitleNumb {
+  font-size: 20px;
+}
+
+.falcon9Desc {
+  font-size: 22px;
+  width: 640px;
+  line-height: 50px;
+}
+
+.containerFalcon9Desc {
+  display: grid;
+  height: 90vh;
+  align-items: center;
+  justify-content: left;
+}
+
+#overViewPosition {
+  width: 500px;
+  margin-left: 13%;
+  padding-top: 15%;
+}
+
+.cassosselSlide img {
+  height: 100vh;
+}
+
+.carousselText {
+  background-color: black;
+}
+
+.downloadDesc {
+  background-color: black;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc a {
+  text-decoration: none;
+  color: white;
+  border-bottom: 1px solid white;
+}
+.downloadDesc a:hover {
+  border-bottom: 1px solid #b9b9b9;
+  color: #b9b9b9;
+}
+.downloadDesc button {
+  border: 2px solid white;
+  margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .numbers .titleNumb {
+    font-size: 80px;
+  }
+  .numbers .subTitleNumb {
+    font-size: 18px;
+  }
+  .falcon9Desc {
+    width: auto;
+  }
+  #overViewPosition {
+    padding-top: 35%;
+  }
+}
+@media (max-width: 575px) {
+  .numbers {
+    height: 60vh;
+  }
+  #overViewPosition {
+    width: auto;
+    margin-left: auto;
+  }
+}
+@media (max-width: 375px) {
+  .titleFalcon9 {
+    font-size: 50px;
+  }
+  .falcon9Desc {
+    font-size: 18px;
+    line-height: auto;
+  }
+  .subTitleFalcon {
+    font-size: 16px;
   }
 }
 
