--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -58,6 +58,14 @@
 }
 
 // Media query
+@media (max-width: 449px) {
+    .downloadDesc {
+        .button {
+            margin: 10px 0px;
+        }
+    }
+}
+
 @media (max-width: 405px){
     .logoPc{
         width: 180px;
