human page creation

--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -56,6 +56,30 @@
         color: $copy-color;
     }
 }
+.downloadDesc{
+    background-color: black;
+    height: 85vh;
+    padding-top: 240px;
+    
+
+
+    button{
+        border: 2px solid white;
+        margin-right: 10px;
+    }
+}
+
+.emailObc{
+    text-decoration: none;
+    color: white;
+    border-bottom: 1px solid white;
+
+    &:hover{
+        border-bottom: 1px solid $link-hover;
+        color: $link-hover;
+
+    }
+}
 
 // Media query
 @media (max-width: 449px) {
