--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,26 @@
   color: #555252;
 }
 
+.downloadDesc {
+  background-color: black;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc button {
+  border: 2px solid white;
+  margin-right: 10px;
+}
+
+.emailObc {
+  text-decoration: none;
+  color: white;
+  border-bottom: 1px solid white;
+}
+.emailObc:hover {
+  border-bottom: 1px solid #b9b9b9;
+  color: #b9b9b9;
+}
+
 @media (max-width: 449px) {
   .downloadDesc .button {
     margin: 10px 0px;
@@ -199,25 +219,6 @@
   background-color: black;
 }
 
-.downloadDesc {
-  background-color: black;
-  height: 85vh;
-  padding-top: 240px;
-}
-.downloadDesc a {
-  text-decoration: none;
-  color: white;
-  border-bottom: 1px solid white;
-}
-.downloadDesc a:hover {
-  border-bottom: 1px solid #b9b9b9;
-  color: #b9b9b9;
-}
-.downloadDesc button {
-  border: 2px solid white;
-  margin-right: 10px;
-}
-
 @media (max-width: 768px) {
   .numbers .titleNumb {
     font-size: 80px;
@@ -252,6 +253,38 @@
   .subTitleFalcon {
     font-size: 16px;
   }
+}
+.container00.container08 {
+  background-image: url(../../images/human/01.jpg);
+}
+.container00.container09 {
+  background-image: url(../../images/human/02.jpg);
+}
+.container00.container10 {
+  background-image: url(../../images/human/03.jpg);
+}
+.container00.container11 {
+  background-image: url(../../images/human/04.jpg);
+}
+.container00.container12 {
+  background-image: url(../../images/human/05.jpg);
+}
+
+.container01Content {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container01Content .titleHuman {
+  font-size: 120px;
+}
+.container01Content .subTitleHuman {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-size: 300;
 }
 
 /*# sourceMappingURL=style.css.map */
