--- a/sass/pages/humanSpace.scss
+++ b/sass/pages/humanSpace.scss
@@ -37,3 +37,33 @@
         font-size: 300;
     }
 }
+.earthDesc {
+    background-color: black;
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .textDescEarth {
+        color: $table-item;
+        font-weight: 400;
+        font-size: 20px;
+        width: 800px;
+    }
+}
+.containetRightContent {
+    margin-left: 55%;
+    padding-top: 15%;
+}
+.titleSection {
+    font-size: 60px;
+    font-weight: bold;
+}
+.subTitle {
+    font-weight: 300;
+    margin-bottom: 40px;
+}
+.containerLeftContent {
+    margin-left: 5%;
+    padding-top: 15%;
+}
