--- a/sass/pages/humanSpace.scss
+++ b/sass/pages/humanSpace.scss
@@ -67,3 +67,61 @@
     margin-left: 5%;
     padding-top: 15%;
 }
+@media (max-width: 768px) {
+    .container01Content{
+      .titleHuman {
+            font-size: 90px;
+        }
+        img {
+            width: 150px;
+        }
+    }
+    .containetRightContent {
+        margin-left: 15%;
+    }
+    .containerLeftContent {
+        margin-left: 15%;
+    }
+    .earthDesc {
+        .textDescEarth {
+            color: $table-item;
+            font-weight: 400;
+            font-size: 18px;
+            width: auto;
+        }
+    }
+}
+ @media (max-width: 610px) {
+    .container01Content{
+        .titleHuman {
+              font-size: 60px;
+          }
+          .subTitleHuman {
+            font-size: 24px;
+          }
+      }
+      .containetRightContent {
+        margin-left: 5%;
+    }
+    .containerLeftContent {
+        margin-left: 5%;
+    }
+
+    .titleSection {
+        font-size: 50px;
+    }
+ };   
+ @media (max-width: 380px) {
+    .container01Content{
+        .titleHuman {
+              font-size: 40px;
+          }
+          .subTitleHuman {
+            font-size: 24px;
+          }
+          img {
+            width: 100px;
+          }
+      }
+ }
+
